Main menu scroll issue
- fix stop propagation onmousewheel event
- fix space issue of menu elements after scrollbar is hidden

--- a/src/client/scss/_common.scss
+++ b/src/client/scss/_common.scss
@@ -6,7 +6,7 @@ body {
   background: $page-bg;
 }
 
-body, html{
+body{
     height: 100%;
 }
 
